# extermproject

./: background.py  draw.py  dtd.py  game_framework.py  game_manager.py  gesture_cache.pkl  main.py  player.py  ramona.py  resource.py  sheetyong.py  stage1_background.py
I-wanna-be-the-boshy/: CMakeLists.txt  README.md  config.json  imgui.ini  log.txt
I-wanna-be-the-boshy/Resources/Image/Background/WORLD1/: Map1.txt  Map10.txt  Map11.txt  Map12.txt  Map13.txt  Map14.txt  Map2.txt  Map3_1.txt  Map3_2.txt  Map4_1.txt  Map4_2.txt  Map5.txt  Map6.txt  Map7.txt  Map8.txt  Map9.txt  Mapnone.txt
I-wanna-be-the-boshy/Resources/Image/Background/world2/: Map1.txt  Map2_1.txt  Map2_2.txt  Map3.txt  Map4.txt  Map5.txt  Map6.txt
I-wanna-be-the-boshy/Resources/Image/MapObject/: phase2trap1.txt  phase2trap2.txt
I-wanna-be-the-boshy/Resources/Image/enemy/: spider1.txt  spider2.txt
I-wanna-be-the-boshy/include/: AnimatedCharacter.hpp  App.hpp  AppMembers.hpp  BackgroundImage.hpp  BgmManager.hpp  Bullet.hpp  Character.hpp  GameObjectHelper.hpp  GameOverUI.hpp  MapInfoLoader.hpp  Menu.hpp  PlayerManager.hpp  ResourceManager.hpp  TrapManager.hpp  World.hpp  bear.hpp  imgui.hpp
I-wanna-be-the-boshy/include/Boss1/: Boss1.hpp  BossDeadAnimation.hpp  BossHpInfo.hpp  BulletTypeA.hpp  BulletTypeB.hpp  BulletTypeC.hpp  LightAttack.hpp
I-wanna-be-the-boshy/include/MapObject/: CheckPoint.hpp  JumpBoost.hpp  Platform.hpp  bird.hpp  fallingground.hpp  phase2trap.hpp  spider.hpp
I-wanna-be-the-boshy/src/: AnimatedCharacter.cpp  App.cpp  AppStart.cpp  AppUpdate.cpp  BgmManager.cpp  Bird.cpp  Bullet.cpp  Character.cpp  CheckPoint.cpp  GameOverUI.cpp  MapInfoLoader.cpp  Menu.cpp  PlayerManager.cpp  ResourceManager.cpp  bear.cpp  imgui.cpp  phase2trap.cpp  spider.cpp
I-wanna-be-the-boshy/src/Boss1/: Boss1.cpp  BossDeadAnimation.cpp  BulletTypeA.cpp  BulletTypeB.cpp  BulletTypeC.cpp  LightAttack.cpp
qdollar/PDollarDemo/: FormIntro.Designer.cs  FormMain.Designer.cs  PDollarDemo.csproj
qdollar/PDollarDemo/Properties/: Resources.Designer.cs  Settings.Designer.cs
qdollar/PDollarGestureRecognizer/: PDollarGestureRecognizer.csproj
